remove jsdoc; update .babelrc use

--- a/example/normal(react)/client/static/html/index.hbs
+++ b/example/normal(react)/client/static/html/index.hbs
@@ -6,6 +6,6 @@
     <p>static path defined in config.json: {{ client.publicPath }}</p>
     <div id="react-app"></div>
   </div>
-  <script src="{{ client.publicPath }}/static/lib.js"></script>
+  <script src="{{ client.publicPath }}/asset/lib.js"></script>
 </body>
 </html>
