--- a/example/vue@2/client/static/html/index.hbs
+++ b/example/vue@2/client/static/html/index.hbs
@@ -8,6 +8,6 @@
       <app></app>
     </div>
   </div>
-  <script src="{{ client.publicPath }}/static/lib.js"></script>
+  <script src="{{ client.publicPath }}/asset/lib.js"></script>
 </body>
 </html>
